<resources>
    <string name="app_name">AuctionApp</string>
    <string name="login_1">Tên đăng nhập/ Email</string>
    <string name="login_2">Mật khẩu</string>
    <string name="login_3">Quên mật khẩu?</string>
    <string name="login_4">Đăng nhập</string>
    <string name="login_5">Chưa có tài khoản?</string>
    <string name="login_6">Đăng ký?</string>


    <string name="register_hint_1_1_default">Nhập vào tài khoản</string>
    <string name="register_hint_1_1_0">Tài khoản hợp lệ</string>
    <string name="register_hint_1_1_1">Tên tài khoản cần ít nhất 6 ký tự</string>
    <string name="register_hint_1_1_2">Tên tài khoản không hợp lệ</string>
    <string name="register_hint_1_1_3">Tên tài khoản đã tồn tại</string>

    <string name="register_hint_2_1_default">Nhập vào mật khẩu</string>
    <string name="register_hint_2_1_0">Mật khẩu hợp lệ</string>
    <string name="register_hint_2_1_1">Mật khẩu không hợp lệ, cần tối thiểu 6 ký tự, bao gồm số, viết hoa, chữ thường</string>

    <string name="register_hint_3_1_default">Nhập lại chuỗi mật khẩu</string>
    <string name="register_hint_3_1_0">Mật khẩu nhập lại trùng khớp</string>
    <string name="register_hint_3_1_1">Mật khẩu nhập lại không trùng khớp</string>

    <string name="register_6_1">Iam not robot</string>

    <string name="register_hint_1_2_default">Nhập vào họ và tên</string>
    <string name="register_hint_1_2_0">Họ và tên người dùng hợp lệ</string>
    <string name="register_hint_1_2_1">Họ và tên người dùng không hợp lệ</string>

    <string name="setting_title">Cài đặt</string>
    <string name="setting_1">Tải ảnh đại diện</string>
    <string name="setting_2">Tổ chức</string>
    <string name="setting_3">Cá nhân</string>
    <string name="setting_4">Tên tài khoản</string>
    <string name="setting_5">Mật khẩu mới</string>
    <string name="setting_6">Thư điện tử</string>
    <string name="setting_7">Số điện thoại</string>
    <string name="setting_8">Cập nhật</string>
    <string name="setting_9">Thay đổi ngôn ngữ</string>
    <string name="about_title">Giới thiệu</string>
    <string name="about_1">Biểu mẫu</string>
    <string name="about_2">Tải lên</string>
    <string name="about_3">Chỉnh sửa</string>
    <string name="about_4">Cập nhật</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="navigation_drawer_open"> Open navigation drawer</string>
    <string name="navigation_drawer_close"> Close navigation drawer</string>

    <string name="home_header">Danh sách biển công bố</string>
    <string name="province_header">Chọn tỉnh thành tra cứu</string>
    <string name="typeCar_header">Danh sách các loại xe</string>

    <string name="coming_header">Biển số sắp đấu giá</string>
    <string name="result_header">Kết quả đấu giá</string>
    <string name="notification_header">Thông báo đấu giá</string>
    <string name="change_profile_header">Thay đổi thông tin cá nhân</string>
    <string name="setting_header">Cài đặt</string>
    <string name="about_message_header">Gửi tin nhắn cho chúng tôi</string>
    <string name="about_us_header">Giới thiệu về chúng tôi</string>
    <string name="about_language_header">Thay đổi ngôn ngữ</string>
    <string name="user_view_header">Danh sách biển số ưu tiên</string>
</resources>