<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/one_step1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:gravity="left"
            android:orientation="horizontal"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login_5" />

            <TextView
                android:id="@+id/create"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:text="@string/login_6"
                android:textColor="@color/forgot" />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/two_step1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/one_step1"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="10dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Loai tai khoan" />

            <RadioGroup
                android:id="@+id/radio_two_step1"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:orientation="horizontal">
                <RadioButton
                    android:id="@+id/radio_1"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="match_parent"
                    android:paddingLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:text="Ca nhan"
                    android:background="@drawable/border_2"/>
                <RadioButton
                    android:id="@+id/radio_2"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="match_parent"
                    android:paddingLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:text="To chuc"
                    android:background="@drawable/border_2"/>
            </RadioGroup>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/three_step1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/two_step1"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Tai khoan"/>
            <EditText
                android:id="@+id/edit_text_three_step1"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="@drawable/border_1"
                android:paddingLeft="10dp"/>
            <TextView
                android:id="@+id/hint_three_step1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Nhap vao tai khoan"
                android:layout_marginLeft="10dp"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/four_step1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/three_step1"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Mat Khau"/>
            <EditText
                android:id="@+id/password_edit_text_three_step1"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="@drawable/border_1"
                android:paddingLeft="10dp"
                android:inputType="textPassword"
                android:drawableRight="@drawable/hidden_password"
                android:paddingRight="10dp"/>
            <TextView
                android:id="@+id/password_hint_three_step1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Nhap vao Mat Khau"
                android:layout_marginLeft="10dp"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/five_step1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/four_step1"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Nhap lai Mat Khau"/>
            <EditText
                android:id="@+id/rePassword_edit_text_three_step1"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="@drawable/border_1"
                android:paddingLeft="10dp"
                android:inputType="textPassword"
                android:drawableRight="@drawable/hidden_password"
                android:paddingRight="10dp"/>
            <TextView
                android:id="@+id/re_password_hint_three_step1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Nhap lai chuoi Mat Khau"
                android:layout_marginLeft="10dp"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/six_step1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/five_step1"
            android:layout_marginLeft="18dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="10dp">
            <CheckBox
                android:id="@+id/checkbox_not_robot"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:text="@string/register_6_1"
                android:textSize="16sp"/>
        </LinearLayout>
        <Button
            android:id="@+id/seven_step1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/six_step1"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:background="@drawable/button_1"
            app:backgroundTint="@null"
            android:text="Tiep theo"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>